objects/PWCAAssociated_Customers__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <filterItems>
                <field>Account.Stage__c</field>
                <operation>notEqual</operation>
                <value>Unqualified</value>
            </filterItems>
            <filterItems>
                <field>Account.Stage__c</field>
                <operation>notEqual</operation>
                <value>Inactive</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Associated Customers</relationshipLabel>
        <relationshipName>Associated_Customers1</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>OpenTextId__c</fullName>
        <formula>PWCA_Publication__r.OpenTextId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OpenTextId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PWCA_Publication__c</fullName>
        <label>PWCA Publication</label>
        <referenceTo>PWCA_publication__c</referenceTo>
        <relationshipLabel>Associated Customers</relationshipLabel>
        <relationshipName>Associated_Customers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <formula>Account__r.Short_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>&apos;PWCA&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synch_to_Downstream__c</fullName>
        <label>Synch to Downstream</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Associated Customers</label>
    <nameField>
        <displayFormat>PWCA-AL-{00000}</displayFormat>
        <label>Associated Customers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Customers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>